scripts/nullaway/annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8.txt
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/MapEntryFactoryImpl.java:202: error: [NullAway] initializer method does not guarantee @NonNull fields indexPageFactory (line 77), dataPageFactory (line 79), metaPageFactory (line 81), freeEntryIndexSet (line 123), freeEntries (line 124) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MapEntryFactoryImpl(String mapDir, String mapName) throws IOException {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/MapEntryFactoryImpl.java:397: error: [NullAway] dereferenced expression q is @Nullable
						q.next = p.next;
						 ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/BigConcurrentHashMapImpl.java:257: error: [NullAway] dereferenced expression p is @Nullable
            	while(p.next != e) {
            	       ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/BigConcurrentHashMapImpl.java:316: error: [NullAway] dereferenced expression me is @Nullable
                if (e != null && Arrays.equals(oldValue, me.getEntryValue())) {
                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/BigConcurrentHashMapImpl.java:352: error: [NullAway] dereferenced expression me is @Nullable
                    oldValue = me.getEntryValue();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/BigConcurrentHashMapImpl.java:411: error: [NullAway] dereferenced expression me is @Nullable
                    oldValue = me.getEntryValue();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/BigConcurrentHashMapImpl.java:530: error: [NullAway] dereferenced expression me is @Nullable
                    if (value == null || Arrays.equals(value, me.getEntryValue())) {
                                                                ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/BigConcurrentHashMapImpl.java:531: error: [NullAway] dereferenced expression me is @Nullable
                        oldValue = me.getEntryValue();
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/PerfTest.java:31: error: [NullAway] @NonNull field map not initialized
	private BigConcurrentHashMapImpl map;
	                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:201: error: [NullAway] dereferenced expression pageArray is @Nullable
					assertTrue(pageArray[j].isClosed());
					                    ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:203: error: [NullAway] dereferenced expression pageArray is @Nullable
					assertTrue(!pageArray[j].isClosed());
					                     ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:215: error: [NullAway] dereferenced expression pageArray1 is @Nullable
					assertSame(pageArray1[j], pageArray2[j]);
					                     ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:215: error: [NullAway] dereferenced expression pageArray2 is @Nullable
					assertSame(pageArray1[j], pageArray2[j]);
					                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:217: error: [NullAway] dereferenced expression pageArray1 is @Nullable
					assertNotSame(pageArray1[j], pageArray2[j]);
					                        ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:217: error: [NullAway] dereferenced expression pageArray2 is @Nullable
					assertNotSame(pageArray1[j], pageArray2[j]);
					                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:252: error: [NullAway] dereferenced expression firstPageArray is @Nullable
			IMappedPage page = firstPageArray[j];
			                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:258: error: [NullAway] dereferenced expression firstPageArray is @Nullable
				assertSame(firstPageArray[j], pageArray[j]);
				                         ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:258: error: [NullAway] dereferenced expression pageArray is @Nullable
				assertSame(firstPageArray[j], pageArray[j]);
				                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:294: error: [NullAway] dereferenced expression pages is @Nullable
					pages[i] = this.pageFactory.acquirePage(i);
					     ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageFactoryTest.java:294: error: [NullAway] dereferenced expression this.pageFactory is @Nullable
					pages[i] = this.pageFactory.acquirePage(i);
					                           ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageImpl.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.threadLocalBuffer = null; // hint GC
			                       ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageImpl.java:123: error: [NullAway] dereferenced expression directBufferCleaner is @Nullable
                    Object cleaner = directBufferCleaner.invoke(buffer);
                                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url027b37a4db_ctriposs_bigmap_tgz-pJ8-com_ctriposs_bigmap_LimitTestJ8/src/com/ctriposs/bigmap/page/MappedPageImpl.java:124: error: [NullAway] dereferenced expression directBufferCleanerClean is @Nullable
                    directBufferCleanerClean.invoke(cleaner);
                                            ^
    (see http://t.uber.com/nullaway )
23 errors
